# MSc-Project-Codebase

./: .gitattributes  .gitignore  CLAUDE.md  README.md  allurerc.mjs  daily-log.md  design-decisions.md  fix-later.md  plan.md  pyproject.toml  requirements.txt  todos.md
.github/workflows/: allure.yml  lint.yml  pytest.yml  release.yml  typecheck.yml
docs/: scheme.mmd
experiments/deepface/: main.py
experiments/emotiefflib/: compare_on_frames.py
experiments/fer-2013/: main.py
experiments/reachy/: hello.py  quickstart.py
logs/: index.md
profiles/default/: instructions.txt  sweep_look.py  tools.txt
src/reachy_mini_conversation_app/: app_lifecycle.py  config.py  console.py  conversation_handler.py  huggingface_realtime.py  main.py  mcp_client.py  moves.py  personality.py  personality_routes.py  prompts.py  streaming.py  utils.py
src/reachy_mini_conversation_app/static/: index.html  style.css
src/reachy_mini_conversation_app/static/js/: api.js  main.js  orb.js  personality-badge.js
src/reachy_mini_conversation_app/static/js/components/: profile-modal.js
src/reachy_mini_conversation_app/static/js/views/: talk.js
src/reachy_mini_conversation_app/tools/: camera.py  core_tools.py
study_assistant/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
study_assistant/.github/: pull_request_template.md
study_assistant/.github/workflows/: allure.yml  pr-hf-space-preview.yml  pytest.yml  sync-hf-space.yml  typecheck.yml  uv-lock-check.yml
study_assistant/profiles/adhd_study_assistant/: instructions.txt
study_assistant/profiles/default/: tools.txt
study_assistant/profiles/victorian_butler/: tools.txt
study_assistant/src/reachy_mini_conversation_app/: avatars.py  config.py  console.py  conversation_handler.py  emotion_classifier.py  emotion_monitor.py  engagement_client.py  engagement_monitor.py  huggingface_realtime.py  idle_policy.py  intervention_monitor.py  main.py  moves.py  prompts.py  tool_spaces.py  utils.py
study_assistant/src/reachy_mini_conversation_app/static/: style.css
study_assistant/src/reachy_mini_conversation_app/static/js/: api.js  constants.js  pending-apply.js  router.js  ui.js
study_assistant/src/reachy_mini_conversation_app/static/js/views/: settings.js  talk.js
study_assistant/src/reachy_mini_conversation_app/tools/: background_tool_manager.py  camera.py  core_tools.py  go_to_sleep.py  head_tracking.py  play_emotion.py
study_assistant/tests/: test_config.py  test_config_name_collisions.py  test_console.py  test_emotion_classifier.py  test_emotion_monitor.py  test_engagement_client.py  test_engagement_monitor.py  test_external_loading.py  test_huggingface_realtime.py  test_main.py  test_mcp_client_integration.py  test_moves.py  test_profile_paths.py  test_startup_settings.py  test_tool_space_runtime.py  test_tool_spaces.py
study_assistant/tests/tools/: test_camera.py  test_go_to_sleep.py  test_play_emotion.py
study_assistant_v1/: .gitignore  README.md  index.html  plan.md  pyproject.toml
study_assistant_v1/src/study_assistant_v1/: config.py  console.py  event_logger.py  headless_personality.py  main.py  moves.py  openai_realtime.py  prompts.py  utils.py
study_assistant_v1/src/study_assistant_v1/audio/: head_wobbler.py
study_assistant_v1/src/study_assistant_v1/perception/: __init__.py  context_provider.py  emotion_recognizer.py  engagement_detector.py  study_config.py
study_assistant_v1/src/study_assistant_v1/profiles/: __init__.py
study_assistant_v1/src/study_assistant_v1/profiles/_study_assistant_v1_locked_profile/: custom_tool.py  instructions.txt  sweep_look.py  tools.txt
study_assistant_v1/src/study_assistant_v1/static/: index.html  main.js
study_assistant_v1/src/study_assistant_v1/tools/: background_tool_manager.py  camera.py  core_tools.py  do_nothing.py  head_tracking.py  move_head.py  play_emotion.py  stop_emotion.py  task_cancel.py  task_status.py
study_assistant_v1/src/study_assistant_v1/vision/: processors.py
study_assistant_v1/tests/: test_config_name_collisions.py  test_external_loading.py  test_openai_realtime.py
study_assistant_v1/tests/audio/: test_head_wobbler.py
study_assistant_v1/tests/tools/: test_background_tool_manager.py
study_assistant_v1/tests/vision/: test_processors.py
study_assistant_v2/: .gitignore  README.md  index.html  pyproject.toml  run.sh  style.css
study_assistant_v2/src/study_assistant_v2/: config.py  console.py  main.py  moves.py  openai_realtime.py  prompts.py  utils.py
study_assistant_v2/src/study_assistant_v2/audio/: head_wobbler.py
study_assistant_v2/src/study_assistant_v2/profiles/_study_assistant_v2_locked_profile/: custom_tool.py  instructions.txt  sweep_look.py  tools.txt
study_assistant_v2/src/study_assistant_v2/static/: index.html  style.css
study_assistant_v2/src/study_assistant_v2/tools/: background_tool_manager.py  camera.py  core_tools.py  dance.py  do_nothing.py  head_tracking.py  move_head.py  play_emotion.py  stop_dance.py  stop_emotion.py  task_cancel.py  task_status.py
study_assistant_v2/src/study_assistant_v2/vision/: processors.py
study_assistant_v2/tests/: test_config_name_collisions.py  test_external_loading.py  test_openai_realtime.py
study_assistant_v2/tests/audio/: test_head_wobbler.py
study_assistant_v2/tests/tools/: test_background_tool_manager.py
study_assistant_v2/tests/vision/: test_processors.py
tests/: test_app_lifecycle.py  test_console.py  test_huggingface_realtime.py  test_moves.py  test_personality_avatars.py  test_personality_delete.py  test_tool_space_runtime.py
tests/tools/: test_camera.py  test_head_tracking.py
